[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/herochar sprites(new)/herochar_spritesheet(new).png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=3]
[ext_resource path="res://Assets/herochar sprites(new)/herochar_sword_attack_anim_strip_4.png" type="Texture" id=4]
[ext_resource path="res://SFX/climb1.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/whip.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/jump.wav" type="AudioStream" id=7]

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform vec4 flashColor:hint_color = vec4(1.0);
uniform float flashModifier:hint_range(0.0,1.0) = 1;

void fragment()
{
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flashColor.rgb, flashModifier);
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/flashColor = Color( 1, 1, 1, 1 )
shader_param/flashModifier = 0.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 30.0

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Jump_Down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump_Up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerJump:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Player_Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword Attack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sword Attack:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hit Area/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerAttack:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sword Attack:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sword Attack:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hit Area/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlayerRun:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PlayerAttack:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PlayerJump:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerRun:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.08511, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 16.0
height = 30.0

[sub_resource type="CapsuleShape2D" id=14]
radius = 24.0
height = 0.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )
MOVE_SPEED = 500.0
JUMP_TIME_TO_PEAK = 0.7
JUMP_TIME_TO_DESCENT = 0.4

[node name="Sprite" type="Sprite" parent="."]
visible = false
material = SubResource( 12 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 8
vframes = 15
frame = 40

[node name="Sword Attack" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
method_call_mode = 1
anims/Idle = SubResource( 4 )
anims/Jump_Down = SubResource( 9 )
anims/Jump_Up = SubResource( 8 )
anims/Player_Attack = SubResource( 6 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( -15, 26 )
rotation = 1.5708
randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 5, 1 )
scale_amount = 4.0
scale_amount_curve = SubResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
offset_h = 0.5
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Hurt_Area" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_Area"]
position = Vector2( 0, 1 )
shape = SubResource( 10 )

[node name="Hit Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit Area"]
position = Vector2( 44, 8 )
shape = SubResource( 14 )

[node name="LevelEndCheck" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LevelEndCheck"]
position = Vector2( 0, 1 )
shape = SubResource( 10 )

[node name="Dice Collision Area" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dice Collision Area"]
position = Vector2( 0, 1 )
shape = SubResource( 10 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
energy = 0.7
shadow_enabled = true
shadow_gradient_length = 10.0

[node name="Orb Detect Area" type="Area2D" parent="."]
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Orb Detect Area"]
position = Vector2( 0, 1 )
shape = SubResource( 10 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Flash Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PlayerRun" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PlayerAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PlayerJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hurt_Area" to="." method="_on_Hurt_Area_area_entered"]
[connection signal="area_entered" from="LevelEndCheck" to="." method="_on_LevelEndCheck_area_entered"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="Flash Timer" to="." method="_on_Flash_Timer_timeout"]
